# python-inoreader

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: pre-commit.yaml  publish.yaml  pythonpackage.yml
examples/: rules.example.yaml
inoreader/: __init__.py  article.py  client.py  config.py  consts.py  exception.py  filter.py  main.py  sim.py  subscription.py  utils.py
