[tool.black]
line-length = 100
skip-string-normalization = true
extend-exclude = '''
/(
  # exclude migrations
  | migrations
)/
'''

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if typing.TYPE_CHECKING:",
  "if TYPE_CHECKING:",
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip = [".ipython"]
remove_redundant_aliases = true

[project]
name = "python-inoreader"
version = "0.4.7"
description = "Python wrapper of Inoreader API"
authors = [
    {name = "Linusp", email = "linusp1024@gmail.com"},
]
dependencies = [
    "lxml",
    "requests",
    "PyYAML",
    "click",
    "requests-oauthlib",
    "flask",
    "tabulate",
]
requires-python = ">=3.6"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
inoreader = "inoreader.main:main"

[project.urls]
Homepage = "https://github.com/Linusp/python-inoreader"
