[project]
name = "python-inoreader"
version = "0.6.0"
description = "Python wrapper of Inoreader API"
authors = [
    {name = "Linusp", email = "linusp1024@gmail.com"},
]
dependencies = [
    "lxml",
    "requests",
    "PyYAML",
    "click",
    "requests-oauthlib",
    "flask",
    "tabulate",
]
requires-python = ">=3.6"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
inoreader = "inoreader.main:main"

[project.urls]
Homepage = "https://github.com/Linusp/python-inoreader"

[tool.codespell]
skip = "*.lock,./.tox,./.venv,./.git,./venv,./*.json,./*.jsonl,./*.yaml"
quiet-level = 3
ignore-words-list = "inoreader"
count = ""

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E201", "E202"]
